samples/_failures_safe/1761470842_2893c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_148bd95c.c: In function ‘main’:
./samples/SAFE/__tmp_148bd95c.c:169:13: error: expected ‘;’ at end of input
  169 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_148bd95c.c:169:5: error: expected declaration or statement at end of input
  169 |     return 0
      |     ^~~~~~
